# projetC

./: README.md
testprojetC/: CMakeLists.txt  function.c  function.h  main.c
